fix: Overide padding default bootstrap nav-link class to prevent item wrapping in main nav bar

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -76,6 +76,10 @@ nav a:hover {
     color: #75e6ff; 
 }
 
+a.nav-link {
+    padding: 0.5rem;
+}
+
 .item-counter {
     background: #be0202;
     color: #fff;
